--- a/cbh_chem_api/templates/cbh_chem_api/login.html
+++ b/cbh_chem_api/templates/cbh_chem_api/login.html
@@ -31,7 +31,7 @@
             
 {% csrf_token %}
           <fieldset><div id="div_id_username" class="form-group"><label for="id_username" class="control-label  requiredField">
-                      Username<span class="asteriskField">*</span></label><div class="controls "><input class="textinput textInput form-control" id="id_username" maxlength="254" name="username" type="text"> </div></div>
+                      Username<span class="asteriskField">*</span></label><div class="controls "><input class="textinput textInput form-control" id="id_username" maxlength="254" name="username" type="text" autofocus> </div></div>
                       <div id="div_id_password" class="form-group"><label for="id_password" class="control-label  requiredField">
                       Password<span class="asteriskField">*</span></label><div class="controls "><input class="textinput textInput form-control" id="id_password" name="password" type="password"> </div></div>
                   </fieldset>
