--- a/cbh_chem_api/templates/cbh_chem_api/cbh_template.html
+++ b/cbh_chem_api/templates/cbh_chem_api/cbh_template.html
@@ -60,7 +60,7 @@
         
       </div>
       <div class="col-xs-4" id="slogan">
-        <h2 class="text-center" style="padding-top:5px;"><a href="https://chembiohub.ox.ac.uk" target="_blank"><img src="https://chembiohub.ox.ac.uk/chembiohub-theme/img/CBH_2_2_LowRes.png" style="height:45px"></a>  Platform <small><sup>beta</sup></small></h2>
+        <h2 class="text-center" style="padding-top:5px;"><a href="https://chembiohub.ox.ac.uk" target="_blank"><img src="{{site_prefix}}bower_components/chembiohub-theme/img/CBH_2_2_LowRes.png" style="height:45px"></a>  Platform <small></h2>
       </div>
       <div class="col-xs-3">
 
