--- a/cbh_chem_api/templates/cbh_chem_api/cbh_template.html
+++ b/cbh_chem_api/templates/cbh_chem_api/cbh_template.html
@@ -78,12 +78,6 @@
       
   
   <div class="row">
-
-
-
-
-
-      
         <div class="row mt">
           <h2 class="blue centered">{{skinningconfig.login_page_title}}<br>
           <small>{{skinningconfig.login_page_subtitle}}</small></h2>
@@ -93,22 +87,21 @@
       {{ content }}
       {% endblock %}
         
-
   <div class="row">
     <div class="row centered">
         <div class="col-xs-12">
           <h2><small>ChemBio Hub Platform is built using:</small></h2>
         </div>
-        <div class="col-xs-6 col-sm-3">
+        <div class="col-xs-12 col-sm-6 col-md-3">
           <a href="https://www.djangoproject.com/" onclick="return !window.open(this.href);"><img src="{{site_prefix}}bower_components/chembiohub-theme/img/django.png" alt="Django Framework" title="Django Framework"></a>
         </div>
-        <div class="col-xs-6 col-sm-3">
+        <div class="col-xs-12 col-sm-6 col-md-3">
           <a href="https://www.ebi.ac.uk/chembl/ws" onclick="return !window.open(this.href);"><img src="{{site_prefix}}bower_components/chembiohub-theme/img/chembl.png" alt="ChEMBL" title="ChEMBL"></a>
         </div>
-        <div class="col-xs-6 col-sm-3">
+        <div class="col-xs-12 col-sm-6 col-md-3">
           <a href="https://angularjs.org/" onclick="return !window.open(this.href);"><img src="{{site_prefix}}bower_components/chembiohub-theme/img/angular.png" alt="AngularJS framework" title="AngularJS framework"></a>
-        </div><div class="col-xs-6 col-sm-3">
-          <a href="https://anaconda.org/" onclick="return !window.open(this.href);"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cd/Anaconda_Logo.png/200px-Anaconda_Logo.png" alt="Anaconda" title="Anaconda"></a>
+        </div><div class="col-xs-12 col-sm-6 col-md-3">
+          <a href="https://anaconda.org/" onclick="return !window.open(this.href);"><img src="{{site_prefix}}bower_components/chembiohub-theme/img/anacondagrey.png" alt="Anaconda" title="Anaconda"></a>
         </div>
         
       </div>
